fix skills gap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -151,7 +151,7 @@ top: 0px;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 45% 45%;
-      grid-template-columns: 40% 40%;
+      grid-template-columns: 45% 45%;
   grid-gap: 10%;
   margin: 5px;
 }
